# reboot-notifier

./: Cargo.toml  README.md  config-example.toml
smf/: reboot-notifier.xml
src/: config.rs  main.rs  svcprop.rs
