[package]
name = "reboot-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
pushover-rs = "0.3.14"
serde = { version = "1.0.188", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.32.0", features = ["macros"] }
toml = { version = "0.8.2", features = ["parse"] }
