[package]
name = "reboot-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
pushover-rs = "0.3.21"
serde = { version = "1.0.219", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.44.2", features = ["macros"] }
toml = { version = "0.8.20", features = ["parse"] }
